--- a/lang/fr.json
+++ b/lang/fr.json
@@ -1,33 +1,55 @@
 {
-	"landscape": "Veuillez tourner votre appareil sur le côté",
-	"options": "Options",
-	"logout": "Se déconnecter",
-	"loading": "CHARGEMENT",
-	"game": "Jeu",
-	"mode": "Mode",
-	"ai": "1vIA",
-	"local": "1v1 local",
-	"tournament": "Tournoi local a 4",
-	"online": "1v1 en ligne",
-	"coin": "Insérer une pièce",
-	"tournamentNames": "Sélectionnez vos pseudonymes",
-	"validate": "Valider",
-	"account": "Compte",
-	"blocked": "Bloqués",
-	"lang": "Langue",
-	"langNote": "N'oubliez pas de sauvegarder pour appliquer votre choix à la prochaine connexion",
-	"avatar": "Avatar",
-	"changeAvatar": "Changer mon avatar:",
-	"connection": "Connexion",
-	"changeUsername": "Nom d'utilisateur:",
-	"changeEmail": "Email:",
-	"changePassword": "Mot de passe:",
-	"save": "Sauvegarder",
-	"2fa": "Authentification à deux facteurs",
-	"2fa-off": "Désactivé",
-	"2fa-sms": "SMS",
-	"2fa-app": "Application Google",
-	"unblock": "Débloquer",
-	"chat": "Chat",
-	"friend": "Amis"
+	"plainText": {
+		"landscape": "Veuillez tourner votre appareil sur le côté",
+		"options": "Options",
+		"logout": "Se déconnecter",
+		"loading": "CHARGEMENT",
+		"game": "Jeu",
+		"mode": "Mode",
+		"ai": "1vIA",
+		"local": "1v1 local",
+		"tournament": "Tournoi local a 4",
+		"online": "1v1 en ligne",
+		"coin": "Insérer une pièce",
+		"tournamentNames": "Sélectionnez vos pseudonymes",
+		"validate": "Valider",
+		"account": "Compte",
+		"blocked": "Bloqués",
+		"lang": "Langue",
+		"langNote": "N'oubliez pas de sauvegarder pour appliquer votre choix à la prochaine connexion",
+		"avatar": "Avatar",
+		"changeAvatar": "Changer mon avatar:",
+		"connection": "Connexion",
+		"changeUsername": "Nom d'utilisateur:",
+		"changeEmail": "Email:",
+		"changePassword": "Mot de passe:",
+		"save": "Sauvegarder",
+		"2fa": "Authentification à deux facteurs",
+		"2fa-off": "Désactivé",
+		"2fa-email": "Email",
+		"2fa-app": "Application Google",
+		"unblock": "Débloquer",
+		"chat": "Chat",
+		"friend": "Amis"
+	},
+	"placeholder": {
+		"p1": "Joueur 1",
+		"p2": "Joueur 2",
+		"p3": "Joueur 3",
+		"p4": "Joueur 4",
+		"passwordActual": "Actuel",
+		"passwordNew": "Nouveau",
+		"passwordConfirmation": "Confirmation"
+	},
+	"title": {
+		"me": "Voir mon historique",
+		"gamezone": "Jouer à un jeu",
+		"chat": "Parler aux autres joueurs",
+		"friendlist": "Liste d'amis",
+		"options": "Options",
+		"logout": "Se déconnecter",
+		"notOnPhone1": "Ce mode est désactivé sur téléphone et tablette",
+		"notOnPhone2": "Ce mode est désactivé sur téléphone et tablette",
+		"notOffline": "Ce mode est désactivé si vous n'êtes pas connecté"
+	}
 }
