--- a/lang/en.json
+++ b/lang/en.json
@@ -79,7 +79,7 @@
 	},
 	"ariaLabel": {
 		"chooseGame": "Choose the game: Pong or Tetris",
-		"mode": "Mode",
+		"mode": "Choost the game mode: ",
 		"1vAI": "Player agaist computer",
 		"1v1": "Local player against player",
 		"tournament": "Local 4-player tournament",
