Add Dutch translation

--- a/lang/nl.json
+++ b/lang/nl.json
@@ -1,93 +1,93 @@
 {
 	"login": {
 		"plainText": {
-			"signin": "Sign in",
-			"forgotten": "Forgotten password",
-			"signup": "Sign up",
-			"cancel": "Cancel",
-			"continue-42": "Continue with 42",
-			"continue-guest": "Continue as Guest"
+			"signin": "Aanmelden",
+			"forgotten": "Paswoord vergeten",
+			"signup": "Inschrijven",
+			"cancel": "Annuleren",
+			"continue-42": "Doorgaan met 42",
+			"continue-guest": "Doorgaan als Gast"
 		},
 		"placeholder": {
 			"email": "Email",
-			"password": "Password",
-			"username": "Username"
+			"password": "Paswoord",
+			"username": "Gebruikersnaam"
 		},
 		"ariaLabel": {
 			"email": "Email",
-			"password": "Password",
-			"username": "Username",
-			"forgottenPassword": "Forgotten password",
-			"signup": "Sign up",
-			"cancel": "Cancel",
-			"continue-42": "Sign in avec 42",
-			"continue-guest": "Playing without signing in"
+			"password": "Paswoord",
+			"username": "Gebruikersnaam",
+			"forgottenPassword": "Paswoord vergeten",
+			"signup": "Inschrijven",
+			"cancel": "Annuleren",
+			"continue-42": "Inloggen met 42",
+			"continue-guest": "Spelen zonder zich aan te melden"
 		}
 	},
 	"plainText": {
-		"landscape": "Please turn your device sideways",
-		"options": "Options",
-		"logout": "Logout",
-		"game": "Game",
+		"landscape": "Gelieve je toestel draaien",
+		"options": "Opties",
+		"logout": "Afmelden",
+		"game": "Spel",
 		"mode": "Mode",
 		"ai": "1vAI",
-		"local": "Local 1v1",
-		"tournament": "Local 4-player tournament",
+		"local": "Locaal 1v1",
+		"tournament": "Locaal 4-spelers toernooi",
 		"online": "Online 1v1",
-		"coin": "Insert coin",
-		"tournamentNames": "Select your nicknames",
-		"validate": "Validate",
+		"coin": "Munt invoegen",
+		"tournamentNames": "Kies jullie bijnamen",
+		"validate": "Bevestigen",
 		"account": "Account",
-		"blocked": "Blocked",
-		"lang": "Language",
-		"langNote": "Do not forget to save to apply your choice to your next connection",
+		"blocked": "Geblokkeerd",
+		"lang": "Taal",
+		"langNote": "Vergeet niet op te slaan om je keuze toe te passen aan je volgende verbinding",
 		"avatar": "Avatar",
-		"changeAvatar": "Change my avatar:",
-		"connection": "Connection",
-		"changeUsername": "Username:",
+		"changeAvatar": "Wijzig mijn avatar:",
+		"connection": "Verbinding",
+		"changeUsername": "Gebruikersnaam:",
 		"changeEmail": "Email:",
-		"changePassword": "Password:",
-		"save": "Save",
-		"2fa": "2-factor Authentication",
-		"2fa-off": "Disabled",
+		"changePassword": "Paswoord:",
+		"save": "Opslaan",
+		"2fa": "2-factor-authenticatie",
+		"2fa-off": "Uitgeschakeld",
 		"2fa-email": "Email",
-		"2fa-app": "Google Application",
-		"unblock": "Unblock",
+		"2fa-app": "Google App",
+		"unblock": "Deblokkeren",
 		"chat": "Chat",
-		"friend": "Friends"
+		"friend": "Vrienden"
 	},
 	"placeholder": {
-		"p1": "Player 1",
-		"p2": "Player 2",
-		"p3": "Player 3",
-		"p4": "Player 4",
-		"passwordActual": "Current",
-		"passwordNew": "New",
-		"passwordConfirmation": "Confirmation"
+		"p1": "Speler 1",
+		"p2": "Speler 2",
+		"p3": "Speler 3",
+		"p4": "Speler 4",
+		"passwordActual": "Huidige",
+		"passwordNew": "Nieuw",
+		"passwordConfirmation": "Bevestiging"
 	},
 	"title": {
-		"me": "See my history",
-		"gamezone": "Play a game",
-		"chat": "Speak to other players",
-		"friendlist": "Friendlist",
-		"options": "Options",
-		"logout": "Logout",
-		"notOnPhone1": "This mode is disabled on phone and tablet",
-		"notOnPhone2": "This mode is disabled on phone and tablet",
-		"notOffline": "This mode is disabled for not logged in user"
+		"me": "Zie mijn historie",
+		"gamezone": "Een spel spelen",
+		"chat": "Spreek met andere spelers",
+		"friendlist": "Vriendenlijst",
+		"options": "Opties",
+		"logout": "Afmelden",
+		"notOnPhone1": "Deze mode is uitgeschakeld op telefoon en tablet",
+		"notOnPhone2": "Deze mode is uitgeschakeld op telefoon en tablet",
+		"notOffline": "Deze mode is uitgeschakeld voor niet aangemelde gebruikers"
 	},
 	"ariaLabel": {
-		"chooseGame": "Choose the game: Pong or Tetris",
-		"mode": "Choost the game mode: ",
-		"1vAI": "Player agaist computer",
-		"1v1": "Local player against player",
-		"tournament": "Local 4-player tournament",
-		"online": "Online player gainst player",
-		"play": "Play!",
-		"pseudo1": "Pseudo of player 1",
-		"pseudo2": "Pseudo of player 2",
-		"pseudo3": "Pseudo of player 3",
-		"pseudo4": "Pseudo of player 4",
-		"validate": "Validate"
+		"chooseGame": "Kies het spel: Pong of Tetris",
+		"mode": "Kies het spel mode: ",
+		"1vAI": "Speler tegen computer",
+		"1v1": "Speler tegen tegen locaal speler",
+		"tournament": "Locaal 4-speler toernooi",
+		"online": "Online spelen tegen een andere speler",
+		"play": "Speel!",
+		"pseudo1": "Bijnaam of speler 1",
+		"pseudo2": "Bijnaam of speler 2",
+		"pseudo3": "Bijnaam of speler 3",
+		"pseudo4": "Bijnaam of speler 4",
+		"validate": "Bevestigen"
 	}
 }
