--- a/lang/nl.json
+++ b/lang/nl.json
@@ -51,7 +51,7 @@
 		"2fa": "2-factor-authenticatie",
 		"2fa-off": "Uitgeschakeld",
 		"2fa-email": "Email",
-		"2fa-app": "QRCode-applicatie",
+		"2fa-app": "QRCode Applicatie",
 		"unblock": "Deblokkeren",
 		"chat": "Chat",
 		"friend": "Vrienden",
@@ -89,10 +89,10 @@
 		"validate": "Bevestigen"
 	},
 	"tabOptions": {
-		"addFriend": "",
-		"removeFriend": "",
-		"seeHistory": "",
-		"invitePong": "",
-		"blockUser": ""
+		"addFriend": "Aan vriendenlijst toevoegen",
+		"removeFriend": "Van vriendenlijst verwijderen",
+		"seeHistory": "Zie geschiedenis",
+		"invitePong": "Uitnodigen voor Pong",
+		"blockUser": "Gebruiker blokkeren"
 	}
 }
