--- a/services/Webserver/static/lang/NL.json
+++ b/services/Webserver/static/lang/NL.json
@@ -102,6 +102,8 @@
 		"pseudo2": "Bijnaam of speler 2",
 		"pseudo3": "Bijnaam of speler 3",
 		"pseudo4": "Bijnaam of speler 4",
+		"showPassword1": "De weergave van mijn wachtwoord wijzigen",
+		"showPassword2": "De weergave van mijn wachtwoord wijzigen",
 		"email": "Email",
 		"code": "Code ontvangen"
 	},
